verif/test/deca/context/invalid/object/class-nondefinie-verif.res
src/test/deca/context/invalid/object/class-nondefinie.deca:8:4: The type 'UndefinedClass' is not defined in the environment of types
